# riscyforth

./: CMakeLists.txt  README.md  basics.S  colhon.fth  condtests.4th  constant.S  core.S  coredefs.S  decision.S  dictionary.S  facility.S  install.txt  integer.S  iterations.S  link.ld  listwords.S  load.S  loops.S  macros.S  makefile  matrix.fth  memory.S  memoryallocator.S  ncurex.fth  newmemalloc.S  outerloop.S  riscyforth.1  riscyforth.S  riscyforth.md  search_create.S  serach_create.S  stackop.S  termioscode.S  test.S  test.fs  test2.4th  testing.4th  testing.fth  transitions.S  utilities.S
modules/: .double.S.swp  .makefile.swp  double.S  makefile  modules.md
modules/double/: double.S  makefile
modules/float/: float.S  float.c  float.md  makefile
modules/frame/: framebuffer.c
modules/ncurses/: .makefile.swp  .ncurses.S.swp  makefile  ncurses.S
modules/xframe/: makefile  xfb.md  xframe.c  xframebuffer.S
riscylib/: makefile  riscy.S  riscy.c  riscyinit.c  riscyvar.S
src/: additional.fth  exceptions.fth  life.fth  testing.fth  x11.fth
